@startuml Plan状态机
!theme plain
hide empty description

title Plan状态机（简化版 - 2025-11-24更新）

[*] --> CREATED : 创建计划

CREATED --> READY : 添加Task\n验证通过

READY --> RUNNING : 提交执行
READY --> CANCELLED : 取消

RUNNING --> PAUSED : 暂停\n[plan级暂停]
RUNNING --> COMPLETED : 所有任务完成
RUNNING --> FAILED : 执行失败
RUNNING --> CANCELLED : 用户取消

PAUSED --> RUNNING : 恢复
PAUSED --> CANCELLED : 取消

COMPLETED --> [*]
FAILED --> [*]
CANCELLED --> [*]

note right of CREATED
  **初始状态**
  - Plan 创建时的状态
  - taskIds 初始为空列表
  - 可添加 Task
end note

note right of READY
  **就绪状态**
  - 至少包含 1 个 Task
  - 准备开始执行
end note

note right of RUNNING
  **执行状态**
  - 任务调度中
  - 遵循 maxConcurrency 限制
  - 监控任务执行状态
  - 记录 startedAt

  **设计说明**：
  - Plan 不感知 Task 的内部状态
  - Task 回滚时，Plan 仍保持 RUNNING
  - 部分失败由应用层处理
end note

note right of PAUSED
  **暂停状态**
  - Plan 级暂停
  - 所有运行中任务暂停
  - 可恢复或取消
end note

note right of COMPLETED
  **完成状态**（终态）
  - 所有任务成功
  - 记录 endedAt
  - 计算总进度
end note

note left of FAILED
  **失败**（终态）
  - 计划执行失败
  - 记录失败原因
end note

note left of CANCELLED
  **已取消**（终态）
  - 用户主动取消
  - 记录取消原因
end note

note bottom
  **重要变更 (2025-11-24)**：
  - 移除 VALIDATING 状态（校验在创建时完成）
  - 移除 PARTIAL_FAILED 状态（应用层处理）
  - 移除 ROLLING_BACK/ROLLED_BACK 状态（Task内部操作，Plan不感知）

  **设计理念**：
  - Plan 聚合专注于任务列表管理和生命周期
  - 不感知 Task 的内部状态转换（如回滚）
  - 符合 DDD 聚合边界原则（AP-01）
end note

@enduml
  **已取消**
  - 用户取消
  - 终态
end note

@enduml

